--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -14,33 +14,52 @@
     <style>
         body {
             font-family: 'Segoe UI', Arial, sans-serif;
-            background: #f5f6fa;
+            background: linear-gradient(135deg, #f0fdf4 0%, #dcfce7 50%, #bbf7d0 100%);
             margin: 0;
             padding: 0;
+            min-height: 100vh;
+        }
+
+        /* Logo 头部样式 */
+        .header-logo {
+            text-align: center;
+            padding: 20px 16px 16px 16px;
+            background: #000000;
+            margin-bottom: 0;
+        }
+
+        .header-logo img {
+            max-height: 60px;
+            max-width: 200px;
+            height: auto;
+            width: auto;
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(255, 255, 255, 0.1);
         }
 
         .container {
             max-width: 400px;
             margin: 0 auto;
-            padding: 16px;
+            padding: 12px 16px;
         }
 
         .section {
-            background: #fff;
-            border-radius: 12px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
-            margin-bottom: 18px;
-            padding: 20px 18px 18px 18px;
+            background: linear-gradient(135deg, #ffffff 0%, #f8fffe 100%);
+            border-radius: 16px;
+            box-shadow: 0 4px 12px rgba(34, 197, 94, 0.08);
+            margin-bottom: 12px;
+            padding: 18px 16px;
         }
 
         .section-title {
             font-weight: 600;
             font-size: 1.1rem;
-            margin-bottom: 14px;
-            color: #222;
+            margin-bottom: 16px;
+            color: #166534;
             display: flex;
             align-items: center;
             gap: 8px;
+            text-shadow: 0 1px 2px rgba(34, 197, 94, 0.1);
         }
 
         .section-title::before {
@@ -71,26 +90,29 @@
             -ms-flex: 1 1 45%;
             flex: 1 1 45%;
             min-width: 90px;
-            padding: 10px 12px;
+            padding: 12px 16px;
             border: none;
-            border-radius: 8px;
-            background: #f8fafc;
-            color: #374151;
+            border-radius: 20px;
+            background: linear-gradient(135deg, #f0fdf4 0%, #dcfce7 100%);
+            color: #166534;
             font-size: 0.9rem;
+            font-weight: 500;
             cursor: pointer;
-            transition: all 0.2s;
-            border: 1px solid #e5e7eb;
+            transition: all 0.3s ease;
+            box-shadow: 0 2px 8px rgba(34, 197, 94, 0.1);
         }
 
         .ai-tool-btn:hover {
-            background: #f1f5f9;
-            border-color: #cbd5e1;
+            background: linear-gradient(135deg, #dcfce7 0%, #bbf7d0 100%);
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(34, 197, 94, 0.2);
         }
 
         .ai-tool-btn.selected {
-            background: #dbeafe;
-            color: #1d4ed8;
-            border-color: #3b82f6;
+            background: linear-gradient(135deg, #22c55e 0%, #16a34a 100%);
+            color: #ffffff;
+            box-shadow: 0 4px 12px rgba(34, 197, 94, 0.3);
+            transform: translateY(-1px);
         }
 
         .translate-tool-container {
@@ -138,35 +160,38 @@
         .content-source-btn {
             -ms-flex: 1;
             flex: 1;
-            padding: 8px 12px;
-            border: 1px solid #d1d5db;
-            border-radius: 6px;
-            background: #f9fafb;
-            color: #374151;
+            padding: 10px 16px;
+            border: none;
+            border-radius: 16px;
+            background: linear-gradient(135deg, #f0fdf4 0%, #dcfce7 100%);
+            color: #166534;
             font-size: 0.9rem;
+            font-weight: 500;
             cursor: pointer;
-            transition: all 0.2s;
+            transition: all 0.3s ease;
+            box-shadow: 0 2px 6px rgba(34, 197, 94, 0.1);
         }
 
         .content-source-btn.active {
-            background: #3b82f6;
-            color: #fff;
-            border-color: #3b82f6;
+            background: linear-gradient(135deg, #22c55e 0%, #16a34a 100%);
+            color: #ffffff;
+            box-shadow: 0 4px 12px rgba(34, 197, 94, 0.3);
+            transform: translateY(-1px);
         }
 
         .result-box {
-            background: #f8fafc;
-            border-radius: 8px;
-            padding: 16px;
-            min-height: 100px;
-            color: #374151;
+            background: linear-gradient(135deg, #f0fdf4 0%, #ecfdf5 100%);
+            border-radius: 16px;
+            padding: 20px;
+            min-height: 120px;
+            color: #166534;
             font-size: 0.95rem;
             line-height: 1.6;
-            border: 1px solid #e5e7eb;
             white-space: pre-wrap;
             word-wrap: break-word;
             max-height: 300px;
             overflow-y: auto;
+            box-shadow: inset 0 2px 4px rgba(34, 197, 94, 0.05);
         }
 
         .result-box.loading {
@@ -189,12 +214,12 @@
         .loading-spinner {
             width: 32px;
             height: 32px;
-            border: 3px solid #e5e7eb;
-            border-top: 3px solid #3b82f6;
+            border: 3px solid rgba(34, 197, 94, 0.2);
+            border-top: 3px solid #22c55e;
             border-radius: 50%;
             animation: spin 1s linear infinite;
             margin-right: 12px;
-            box-shadow: 0 2px 4px rgba(59, 130, 246, 0.2);
+            box-shadow: 0 2px 4px rgba(34, 197, 94, 0.3);
         }
 
         .loading-dots {
@@ -205,10 +230,10 @@
         .loading-dot {
             width: 6px;
             height: 6px;
-            background: linear-gradient(45deg, #3b82f6, #1d4ed8);
+            background: linear-gradient(45deg, #22c55e, #16a34a);
             border-radius: 50%;
             animation: bounce 1.4s ease-in-out infinite both;
-            box-shadow: 0 1px 2px rgba(59, 130, 246, 0.3);
+            box-shadow: 0 1px 2px rgba(34, 197, 94, 0.4);
         }
 
         .loading-dot:nth-child(1) { animation-delay: -0.32s; }
@@ -273,27 +298,33 @@
         }
 
         .result-action-btn.primary {
-            background: linear-gradient(135deg, #3b82f6, #1d4ed8);
+            background: linear-gradient(135deg, #22c55e 0%, #16a34a 100%);
             color: white;
-            box-shadow: 0 4px 12px rgba(59, 130, 246, 0.3);
+            box-shadow: 0 6px 20px rgba(34, 197, 94, 0.4);
+            border-radius: 25px;
+            font-weight: 600;
+            letter-spacing: 0.5px;
         }
 
         .result-action-btn.primary:hover:not(:disabled) {
-            background: linear-gradient(135deg, #2563eb, #1e40af);
-            box-shadow: 0 6px 16px rgba(59, 130, 246, 0.4);
-            transform: translateY(-2px);
+            background: linear-gradient(135deg, #16a34a 0%, #15803d 100%);
+            box-shadow: 0 8px 25px rgba(34, 197, 94, 0.5);
+            transform: translateY(-3px);
         }
 
         .result-action-btn.secondary {
-            background: linear-gradient(135deg, #10b981, #059669);
+            background: linear-gradient(135deg, #10b981 0%, #059669 100%);
             color: white;
-            box-shadow: 0 4px 12px rgba(16, 185, 129, 0.3);
+            box-shadow: 0 6px 20px rgba(16, 185, 129, 0.4);
+            border-radius: 25px;
+            font-weight: 600;
+            letter-spacing: 0.5px;
         }
 
         .result-action-btn.secondary:hover:not(:disabled) {
-            background: linear-gradient(135deg, #059669, #047857);
-            box-shadow: 0 6px 16px rgba(16, 185, 129, 0.4);
-            transform: translateY(-2px);
+            background: linear-gradient(135deg, #059669 0%, #047857 100%);
+            box-shadow: 0 8px 25px rgba(16, 185, 129, 0.5);
+            transform: translateY(-3px);
         }
 
         .result-action-btn.loading {
@@ -313,23 +344,27 @@
         }
 
         .error-message {
-            background: #fef2f2;
-            border: 1px solid #fecaca;
+            background: linear-gradient(135deg, #fef2f2 0%, #fee2e2 100%);
+            border: 2px solid #f87171;
             color: #dc2626;
-            padding: 12px;
-            border-radius: 8px;
+            padding: 14px;
+            border-radius: 12px;
             font-size: 0.9rem;
+            font-weight: 500;
             margin-bottom: 12px;
+            box-shadow: 0 2px 8px rgba(239, 68, 68, 0.1);
         }
 
         .success-message {
-            background: #f0fdf4;
-            border: 1px solid #bbf7d0;
+            background: linear-gradient(135deg, #f0fdf4 0%, #dcfce7 100%);
+            border: 2px solid #22c55e;
             color: #166534;
-            padding: 12px;
-            border-radius: 8px;
+            padding: 14px;
+            border-radius: 12px;
             font-size: 0.9rem;
+            font-weight: 500;
             margin-bottom: 12px;
+            box-shadow: 0 2px 8px rgba(34, 197, 94, 0.1);
         }
 
         .hidden {
@@ -339,11 +374,11 @@
         /* 自定义需求输入框样式 */
         .custom-input-container {
             margin-top: 16px;
-            padding: 16px;
-            background: #f8fafc;
-            border-radius: 8px;
-            border: 1px solid #e5e7eb;
+            padding: 18px;
+            background: linear-gradient(135deg, #f0fdf4 0%, #ecfdf5 100%);
+            border-radius: 16px;
             transition: all 0.3s ease;
+            box-shadow: inset 0 2px 4px rgba(34, 197, 94, 0.05);
         }
 
         .custom-input-container.hidden {
@@ -352,29 +387,31 @@
 
         .custom-input-label {
             font-size: 0.9rem;
-            font-weight: 500;
-            color: #374151;
-            margin-bottom: 8px;
+            font-weight: 600;
+            color: #166534;
+            margin-bottom: 10px;
         }
 
         .custom-input-textarea {
             width: 100%;
-            min-height: 80px;
-            padding: 12px;
-            border-radius: 6px;
-            border: 1px solid #d1d5db;
-            background: #fff;
+            min-height: 90px;
+            padding: 14px;
+            border-radius: 12px;
+            border: none;
+            background: #ffffff;
             font-size: 0.9rem;
             font-family: inherit;
             resize: vertical;
             box-sizing: border-box;
-            transition: border-color 0.2s;
+            transition: all 0.3s ease;
+            color: #166534;
+            box-shadow: 0 2px 6px rgba(34, 197, 94, 0.1);
         }
 
         .custom-input-textarea:focus {
             outline: none;
-            border-color: #3b82f6;
-            box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.1);
+            box-shadow: 0 4px 12px rgba(34, 197, 94, 0.2);
+            background: linear-gradient(135deg, #ffffff 0%, #f8fffe 100%);
         }
 
         .custom-input-textarea::placeholder {
@@ -383,20 +420,18 @@
 
         /* 主要布局区域 */
         .main-operation-area {
-            background: linear-gradient(135deg, #f8fafc 0%, #f1f5f9 100%);
-            border-radius: 12px;
+            background: linear-gradient(135deg, #f0fdf4 0%, #ecfdf5 100%);
+            border-radius: 20px;
             padding: 20px;
-            margin-bottom: 20px;
-            border: 1px solid #e5e7eb;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
+            margin-bottom: 16px;
+            box-shadow: 0 6px 20px rgba(34, 197, 94, 0.1);
         }
 
         .result-preview-area {
-            background: #ffffff;
-            border-radius: 12px;
+            background: linear-gradient(135deg, #ffffff 0%, #f8fffe 100%);
+            border-radius: 20px;
             padding: 20px;
-            border: 1px solid #e5e7eb;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
+            box-shadow: 0 6px 20px rgba(34, 197, 94, 0.08);
         }
 
         /* 处理控制区域 */
@@ -525,35 +560,43 @@
             -ms-flex: 1;
             flex: 1;
             min-width: 120px;
-            padding: 8px 12px;
-            border: 1px solid #d1d5db;
-            border-radius: 6px;
-            background: #f9fafb;
-            color: #374151;
+            padding: 10px 16px;
+            border: none;
+            border-radius: 16px;
+            background: linear-gradient(135deg, #f0fdf4 0%, #dcfce7 100%);
+            color: #166534;
             font-size: 0.9rem;
+            font-weight: 500;
             cursor: pointer;
-            transition: all 0.2s;
+            transition: all 0.3s ease;
             text-align: center;
+            box-shadow: 0 2px 6px rgba(34, 197, 94, 0.1);
         }
 
         .insert-position-btn:hover {
-            background: #f1f5f9;
-            border-color: #cbd5e1;
+            background: linear-gradient(135deg, #dcfce7 0%, #bbf7d0 100%);
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(34, 197, 94, 0.2);
         }
 
         .insert-position-btn.active {
-            background: #3b82f6;
-            color: #fff;
-            border-color: #3b82f6;
+            background: linear-gradient(135deg, #22c55e 0%, #16a34a 100%);
+            color: #ffffff;
+            box-shadow: 0 4px 12px rgba(34, 197, 94, 0.3);
+            transform: translateY(-1px);
         }
     </style>
 </head>
 
 <body>
+    <!-- Logo 头部 -->
+    <div class="header-logo">
+        <img src="logo.png" alt="GPTBots Logo" />
+    </div>
+    
     <div class="container">
         <!-- Section 1: 主要操作区域 -->
-        <div class="main-operation-area">
-            <div class="section">
+        <div class="section">
                 <!-- AI Tools -->
                 <div class="section-title ai-tools">技能</div>
                 <div class="ai-tools-btns">
@@ -562,13 +605,13 @@
                     <button class="ai-tool-btn" data-tool="academic">审批建议</button>
                     <button class="ai-tool-btn" data-tool="summary">总结</button>
                     <button class="ai-tool-btn" data-tool="grammar">修改语法</button>
-                    <button class="ai-tool-btn selected" data-tool="custom">自定义需求</button>
+                    <button class="ai-tool-btn selected" data-tool="custom">自定义</button>
                 </div>
                 
                 <!-- 自定义需求输入框 -->
                 <div class="custom-input-container" id="customInputContainer">
                     <div class="custom-input-label">自定义需求：</div>
-                    <textarea class="custom-input-textarea" id="customInputTextarea" placeholder="GPTBots copilot 会根据你的需求生成内容..."></textarea>
+                    <textarea class="custom-input-textarea" id="customInputTextarea" placeholder="GPTBots会根据你的需求生成内容..."></textarea>
                 </div>
 
                 <!-- Target Content -->
@@ -586,22 +629,19 @@
                     </button>
                 </div>
             </div>
-        </div>
 
         <!-- Section 2: 结果预览区域 -->
         <div class="result-preview-area">
             <!-- Results -->
-            <div class="section">
                 <div class="section-title result">结果预览</div>
                 <div class="error-message hidden" id="errorMessage"></div>
                 <div class="success-message hidden" id="successMessage"></div>
                 <div class="result-box" id="resultBox">
-                    <div id="resultContent">选择AI工具后点击 "开始处理" 获取Agent响应</div>
-                </div>
+                <div id="resultContent">点击 "开始处理" </div>
             </div>
 
             <!-- 插入选项和按钮 -->
-            <div class="section">
+        <div class="section">
                 <div class="section-title">生成位置</div>
                 <div class="insert-position-btns">
                     <button class="insert-position-btn active" data-position="replace">替换选中文本</button>
