--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -600,7 +600,7 @@
                 <!-- AI Tools -->
                 <div class="section-title ai-tools">技能</div>
                 <div class="ai-tools-btns">
-                    <button class="ai-tool-btn" data-tool="translate">翻译</button>
+                    <button class="ai-tool-btn" data-tool="translate">翻译（中→英）</button>
                     <button class="ai-tool-btn" data-tool="polish">润色</button>
                     <button class="ai-tool-btn" data-tool="academic">审批建议</button>
                     <button class="ai-tool-btn" data-tool="summary">总结</button>
@@ -610,7 +610,6 @@
                 
                 <!-- 自定义需求输入框 -->
                 <div class="custom-input-container" id="customInputContainer">
-                    <div class="custom-input-label">自定义需求：</div>
                     <textarea class="custom-input-textarea" id="customInputTextarea" placeholder="GPTBots会根据你的需求生成内容..."></textarea>
                 </div>
 
@@ -637,7 +636,6 @@
                 <div class="error-message hidden" id="errorMessage"></div>
                 <div class="success-message hidden" id="successMessage"></div>
                 <div class="result-box" id="resultBox">
-                <div id="resultContent">点击 "开始处理" </div>
             </div>
 
             <!-- 插入选项和按钮 -->
