--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -14,17 +14,18 @@
     <style>
         body {
             font-family: 'Segoe UI', Arial, sans-serif;
-            background: linear-gradient(135deg, #f0fdf4 0%, #dcfce7 50%, #bbf7d0 100%);
+            background: #ffffff;
             margin: 0;
             padding: 0;
             min-height: 100vh;
+            color: #000000;
         }
 
         /* Logo 头部样式 */
         .header-logo {
-            text-align: center;
-            padding: 20px 16px 16px 16px;
-            background: #000000;
+            text-align: left;
+            padding: 20px 16px 8px 16px;
+            background: #ffffff;
             margin-bottom: 0;
         }
 
@@ -44,7 +45,7 @@
         }
 
         .section {
-            background: linear-gradient(135deg, #ffffff 0%, #f8fffe 100%);
+            background: #ffffff;
             border-radius: 16px;
             box-shadow: 0 4px 12px rgba(34, 197, 94, 0.08);
             margin-bottom: 12px;
@@ -55,11 +56,10 @@
             font-weight: 600;
             font-size: 1.1rem;
             margin-bottom: 16px;
-            color: #166534;
+            color: #000000;
             display: flex;
             align-items: center;
             gap: 8px;
-            text-shadow: 0 1px 2px rgba(34, 197, 94, 0.1);
         }
 
         .section-title::before {
@@ -93,25 +93,25 @@
             padding: 12px 16px;
             border: none;
             border-radius: 20px;
-            background: linear-gradient(135deg, #f0fdf4 0%, #dcfce7 100%);
-            color: #166534;
+            background: #dbfaf9;
+            color: #000000;
             font-size: 0.9rem;
             font-weight: 500;
             cursor: pointer;
             transition: all 0.3s ease;
-            box-shadow: 0 2px 8px rgba(34, 197, 94, 0.1);
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
         }
 
         .ai-tool-btn:hover {
-            background: linear-gradient(135deg, #dcfce7 0%, #bbf7d0 100%);
+            background: #b2e2e0;
             transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(34, 197, 94, 0.2);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
         }
 
         .ai-tool-btn.selected {
-            background: linear-gradient(135deg, #22c55e 0%, #16a34a 100%);
+            background: #006064;
             color: #ffffff;
-            box-shadow: 0 4px 12px rgba(34, 197, 94, 0.3);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
             transform: translateY(-1px);
         }
 
@@ -163,35 +163,35 @@
             padding: 10px 16px;
             border: none;
             border-radius: 16px;
-            background: linear-gradient(135deg, #f0fdf4 0%, #dcfce7 100%);
-            color: #166534;
+            background: #dbfaf9;
+            color: #000000;
             font-size: 0.9rem;
             font-weight: 500;
             cursor: pointer;
             transition: all 0.3s ease;
-            box-shadow: 0 2px 6px rgba(34, 197, 94, 0.1);
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
         }
 
         .content-source-btn.active {
-            background: linear-gradient(135deg, #22c55e 0%, #16a34a 100%);
+            background: #006064;
             color: #ffffff;
-            box-shadow: 0 4px 12px rgba(34, 197, 94, 0.3);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
             transform: translateY(-1px);
         }
 
         .result-box {
-            background: linear-gradient(135deg, #f0fdf4 0%, #ecfdf5 100%);
+            background: #ffffff;
             border-radius: 16px;
             padding: 20px;
             min-height: 120px;
-            color: #166534;
+            color: #000000;
             font-size: 0.95rem;
             line-height: 1.6;
             white-space: pre-wrap;
             word-wrap: break-word;
             max-height: 300px;
             overflow-y: auto;
-            box-shadow: inset 0 2px 4px rgba(34, 197, 94, 0.05);
+            box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.05);
         }
 
         .result-box.loading {
@@ -214,12 +214,12 @@
         .loading-spinner {
             width: 32px;
             height: 32px;
-            border: 3px solid rgba(34, 197, 94, 0.2);
-            border-top: 3px solid #22c55e;
+            border: 3px solid rgba(0, 0, 0, 0.2);
+            border-top: 3px solid #006064;
             border-radius: 50%;
             animation: spin 1s linear infinite;
             margin-right: 12px;
-            box-shadow: 0 2px 4px rgba(34, 197, 94, 0.3);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
         }
 
         .loading-dots {
@@ -230,10 +230,10 @@
         .loading-dot {
             width: 6px;
             height: 6px;
-            background: linear-gradient(45deg, #22c55e, #16a34a);
+            background: #006064;
             border-radius: 50%;
             animation: bounce 1.4s ease-in-out infinite both;
-            box-shadow: 0 1px 2px rgba(34, 197, 94, 0.4);
+            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
         }
 
         .loading-dot:nth-child(1) { animation-delay: -0.32s; }
@@ -298,32 +298,32 @@
         }
 
         .result-action-btn.primary {
-            background: linear-gradient(135deg, #22c55e 0%, #16a34a 100%);
-            color: white;
-            box-shadow: 0 6px 20px rgba(34, 197, 94, 0.4);
+            background: #89ffdd;
+            color: #000000;
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
             border-radius: 25px;
             font-weight: 600;
             letter-spacing: 0.5px;
         }
 
         .result-action-btn.primary:hover:not(:disabled) {
-            background: linear-gradient(135deg, #16a34a 0%, #15803d 100%);
-            box-shadow: 0 8px 25px rgba(34, 197, 94, 0.5);
+            background: #66ffcc;
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.3);
             transform: translateY(-3px);
         }
 
         .result-action-btn.secondary {
-            background: linear-gradient(135deg, #10b981 0%, #059669 100%);
-            color: white;
-            box-shadow: 0 6px 20px rgba(16, 185, 129, 0.4);
+            background: #89ffdd;
+            color: #000000;
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
             border-radius: 25px;
             font-weight: 600;
             letter-spacing: 0.5px;
         }
 
         .result-action-btn.secondary:hover:not(:disabled) {
-            background: linear-gradient(135deg, #059669 0%, #047857 100%);
-            box-shadow: 0 8px 25px rgba(16, 185, 129, 0.5);
+            background: #66ffcc;
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.3);
             transform: translateY(-3px);
         }
 
@@ -356,15 +356,15 @@
         }
 
         .success-message {
-            background: linear-gradient(135deg, #f0fdf4 0%, #dcfce7 100%);
-            border: 2px solid #22c55e;
-            color: #166534;
+            background: #dbfaf9;
+            border: 2px solid #006064;
+            color: #000000;
             padding: 14px;
             border-radius: 12px;
             font-size: 0.9rem;
             font-weight: 500;
             margin-bottom: 12px;
-            box-shadow: 0 2px 8px rgba(34, 197, 94, 0.1);
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
         }
 
         .hidden {
@@ -375,10 +375,10 @@
         .custom-input-container {
             margin-top: 16px;
             padding: 18px;
-            background: linear-gradient(135deg, #f0fdf4 0%, #ecfdf5 100%);
+            background: #dbfaf9;
             border-radius: 16px;
             transition: all 0.3s ease;
-            box-shadow: inset 0 2px 4px rgba(34, 197, 94, 0.05);
+            box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.05);
         }
 
         .custom-input-container.hidden {
@@ -388,7 +388,7 @@
         .custom-input-label {
             font-size: 0.9rem;
             font-weight: 600;
-            color: #166534;
+            color: #000000;
             margin-bottom: 10px;
         }
 
@@ -404,14 +404,14 @@
             resize: vertical;
             box-sizing: border-box;
             transition: all 0.3s ease;
-            color: #166534;
-            box-shadow: 0 2px 6px rgba(34, 197, 94, 0.1);
+            color: #000000;
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
         }
 
         .custom-input-textarea:focus {
             outline: none;
-            box-shadow: 0 4px 12px rgba(34, 197, 94, 0.2);
-            background: linear-gradient(135deg, #ffffff 0%, #f8fffe 100%);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+            background: #ffffff;
         }
 
         .custom-input-textarea::placeholder {
@@ -420,18 +420,18 @@
 
         /* 主要布局区域 */
         .main-operation-area {
-            background: linear-gradient(135deg, #f0fdf4 0%, #ecfdf5 100%);
+            background: #ffffff;
             border-radius: 20px;
             padding: 20px;
             margin-bottom: 16px;
-            box-shadow: 0 6px 20px rgba(34, 197, 94, 0.1);
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
         }
 
         .result-preview-area {
-            background: linear-gradient(135deg, #ffffff 0%, #f8fffe 100%);
+            background: #ffffff;
             border-radius: 20px;
             padding: 20px;
-            box-shadow: 0 6px 20px rgba(34, 197, 94, 0.08);
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.08);
         }
 
         /* 处理控制区域 */
@@ -563,26 +563,26 @@
             padding: 10px 16px;
             border: none;
             border-radius: 16px;
-            background: linear-gradient(135deg, #f0fdf4 0%, #dcfce7 100%);
-            color: #166534;
+            background: #dbfaf9;
+            color: #000000;
             font-size: 0.9rem;
             font-weight: 500;
             cursor: pointer;
             transition: all 0.3s ease;
             text-align: center;
-            box-shadow: 0 2px 6px rgba(34, 197, 94, 0.1);
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
         }
 
         .insert-position-btn:hover {
-            background: linear-gradient(135deg, #dcfce7 0%, #bbf7d0 100%);
+            background: #b2e2e0;
             transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(34, 197, 94, 0.2);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
         }
 
         .insert-position-btn.active {
-            background: linear-gradient(135deg, #22c55e 0%, #16a34a 100%);
+            background: #006064;
             color: #ffffff;
-            box-shadow: 0 4px 12px rgba(34, 197, 94, 0.3);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
             transform: translateY(-1px);
         }
     </style>
@@ -591,7 +591,7 @@
 <body>
     <!-- Logo 头部 -->
     <div class="header-logo">
-        <img src="logo.png" alt="GPTBots Logo" />
+        <img src="GPTBots.png" alt="GPTBots Logo" />
     </div>
     
     <div class="container">
